# ComfyUI-Purz

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMFYUI_FRONTEND_INTEGRATION_GUIDE.md  README.md  __init__.py  animated_patterns.py  animated_patterns_v3.py  image_effects.py  image_effects_v3.py  interactive_filters.py  interactive_filters_v3.py  nodes.py  painpoints.md  pattern_generators.py  pattern_generators_v3.py  plan.md  pyproject.toml  requirements.txt  utils.py
.claude/: settings.local.json
.github/workflows/: publish.yml
example_workflows/: example.json
presets/: farts.json
shaders/: effects.json
shaders/artistic/: charcoal.glsl  comicBook.glsl  edgeDetect.glsl  emboss.glsl  linocut.glsl  mosaic.glsl  oilPaint.glsl  pencilSketch.glsl  pointillism.glsl  popArt.glsl  sketch.glsl  stainedGlass.glsl  watercolor.glsl  woodcut.glsl
shaders/basic/: autoContrast.glsl  brightness.glsl  contrast.glsl  crossProcess.glsl  desaturate.glsl  equalize.glsl  exposure.glsl  fade.glsl  gain.glsl  gamma.glsl  lift.glsl  normalize.glsl  offset.glsl  saturation.glsl  solarize.glsl  vibrance.glsl
shaders/color/: channelMixer.glsl  cmykAdjust.glsl  colorBalance.glsl  colorHarmony.glsl  colorLookup.glsl  colorize.glsl  gradientMap.glsl  hslAdjust.glsl  hueShift.glsl  rgbCurves.glsl  selectiveColor.glsl  splitTone.glsl  temperature.glsl  tint.glsl  vibrancePro.glsl
shaders/core/: passthrough.glsl  vertex.glsl
shaders/creative/: chromatic.glsl  fisheye.glsl  glitch.glsl  halftone.glsl  kaleidoscope.glsl  mirror.glsl  pinch.glsl  pixelate.glsl  ripple.glsl  spherize.glsl  (+4 more)
(+67 files in other folders)
